# one-piece-ai-rpg

./: .gitignore  CREDITS.md  README.md  README.pt-BR.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: app_settings.py  config.py  main.py
backend/app/api/: campaigns.py  catalog.py  health.py  settings.py  setup.py
backend/app/db/: catalog.py  connection.py  migrate.py  repositories.py  seed.py  world_snapshot.py
backend/app/db/migrations/: 0001_init.sql  0002_world_state.sql  0003_story_cards_fts.sql  0004_catalogs.sql  0005_crystal_collapse_subject.sql  0006_plot_closure.sql  0007_world_snapshots.sql  0008_turn_trace.sql  0009_plot_layers.sql  0010_placeholder_bindings.sql  0011_drop_plots.sql  0012_campaign_language.sql  0013_catalog_i18n.sql
backend/app/db/seed_data/: blank_island_slots.json  canon_world.en.json  canon_world.json  canonical_items.en.json  factions.en.json  (+9 more)
backend/app/pipeline/: __init__.py  agent_state.py  agents.py  alliances.py  auditor.py  breakthroughs.py  character_creation.py  creature_generator.py  crew.py  crystallizer.py  departure.py  director.py  economy.py  edit.py  endgame.py  faction.py  fighting_style.py  fruit_alt_canon.py  game_clock.py  island_designer.py  item_generator.py  language.py  legend.py  meta_router.py  mushi.py  narrator.py  nemesis.py  news_coo.py  npc_generator.py  npc_mind_post.py  plots.py  poneglyph.py  post_turn.py  reconcile.py  research.py  runner.py  ship.py  ship_generator.py  tactical_actions.py  techniques.py  (+4 more)
backend/app/proxy/: client.py  errors.py  health.py  mgmt.py  spawn.py
(+102 files in other folders)
