[project]
name = "one-piece-rpg-backend"
version = "0.1.0"
description = "Backend FastAPI do One Piece RPG — pipeline Diretor/Agentes/Narrador via CLIProxyAPI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

# App, não biblioteca: uv não tenta "buildar" o projeto. `app` é importável via CWD=backend/.
[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "proxy: testes que batem no CLIProxyAPI real (pulam se o proxy não responder)",
    "network: testes que batem na MediaWiki API do Fandom (pulam se a rede não responder)",
]
